[package]
name = "c2md"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN"]
license = "MIT"
description = "Universal Markdown Converter (CLI)"
repository = "https://github.com/makalin/c2md"
keywords = ["markdown", "converter", "pdf", "docx", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "c2md"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
slug = "0.1"
pulldown-cmark = { version = "0.10", features = ["html"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
image = "0.24"
base64 = "0.21"
mime_guess = "2.0"
tempfile = "3.8"
notify = "6.1"
rayon = "1.8"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.3"
ammonia = "3.3"
num_cpus = "1.0"
which = "4.4"
handlebars = "4.5"
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
md5 = "0.7"
pathdiff = "0.2"
dirs = "5.0"
bytes = "1.5"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"